@@ -1,3 +1,8 @@
+2007-12-13  Neal H. Walfield  <neal@gnu.org>
+
+	* l4/ipc.h (_L4_msg_put): Correctly advance ANY_TYPED.
+	(_L4_msg_get): Likewise.
+
 2007-12-08  Neal H. Walfield  <neal@gnu.org>
 
 	* ia32/l4/bits/vregs.h (_L4_utcb_base): New function.
